# pokemon-iyasi1on1

./: .gitignore  README.md  compute_nash.ipynb  pyproject.toml
results/: README.md  compute_nash.nbconvert.ipynb
results/before_recoil_fix/: compute_nash.nbconvert.ipynb
results/before_recoil_fix/data/: monte_carlo_win_table.pkl.xz
results/data/: monte_carlo_win_table.pkl.xz
src/pokemon_iyasi1on1/: __init__.py  damage.py  db.py  example_damage_table.py  example_optimize_hb.py  example_simulation.py  generate_win_table.py  model.py  regulation.py  simulate_battle.py
